erste vollständige implementation, es erscheint eine ausgabe des iCal Codes
git-svn-id: https://svn.eexistence.de/kalender@4 49ae9e9a-b390-11de-a7b7-45c05fdaeb71

--- a/lib/views/index.erb
+++ b/lib/views/index.erb
@@ -32,7 +32,7 @@
 <% end %></select>
           </td>
           <td>
-            <select name="post[gruppe]">
+            <select name="post[seminargruppe]">
               <option value=""></option>
               <option value="1">1</option>
               <option value="2">2</option>
@@ -57,5 +57,7 @@
         </tr>
       </table>
     </form>
+    <p><%= @link %></p>
+    <p><%= @cal_string %></p>
   </body>
 </html>
