ausgabe ist jetzt utf-8, auslagerung der kalenderausgabe auf extraseite
git-svn-id: https://svn.eexistence.de/kalender@6 49ae9e9a-b390-11de-a7b7-45c05fdaeb71

--- a/lib/views/index.erb
+++ b/lib/views/index.erb
@@ -8,7 +8,7 @@
     <h1>HTWK-Kalender to iCal</h1>
     <p>Das ist ein erster Test</p>
     <p><%= @p %></p>
-    <form method="get" action="/">
+    <form method="get" action="/choose">
       <table border="1" cellspacing="0" cellpadding="5">
         <tr>
           <td>Jahrgang</td>
