alle Funktionen ausgelagert, Auswahlseite eingebaut, funktioniert bis jetzt aber nur als Dummy
git-svn-id: https://svn.eexistence.de/kalender@10 49ae9e9a-b390-11de-a7b7-45c05fdaeb71

--- a/views/index.erb
+++ b/views/index.erb
@@ -3,6 +3,7 @@
 <html xmlns='http://www.w3.org/1999/xhtml'>
   <head>
     <title>HTWK-Kalender to iCal</title>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
   </head>
   <body>
     <h1>HTWK-Kalender to iCal</h1>
