--- a/views/get.erb
+++ b/views/get.erb
@@ -1,36 +1,20 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
-"http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+  "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns='http://www.w3.org/1999/xhtml'>
   <head>
     <title>HTWK-Kalender to iCal</title>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-    <style type="text/css">
-      body {
-        width: 600px;
-        font-family: monospace;
-      }
-
-      h1 {
-        font-family: "lucida grande",verdana,arial,helvetica,sans-serif;
-        letter-spacing: -1px;
-        color: #09F
-      }
-
-      .link {
-        background-color: #6F3;
-        padding: 20px;
-        border: 1px solid black;
-        font-weight: bold;
-        font-size: 120%;
-      }
-    </style>
+    <link rel="stylesheet" type="text/css" href="/style.css">
   </head>
   <body>
     <h1>HTWK-Kalender to iCal</h1>
+    <h2>Kalenderlink</h2>
     <p>Hier ist dein Kalenderlink. Kopiere diesen einfach in deine Anwendung, dann kannst du immer den aktuellen Kalender verwenden. Das ist die empfohlene Variante.</p>
     <p class="link"><%= @permalink %></p>
+    <h2>Downloadlink</h2>
     <p>Hier ist dein Downloadlink. Lade dir hier die Kalenderdatei runter. Achtung: Wenn Änderungen am Kalender vorgenommen werden, ändert sich dein Kalender nicht automatisch, falls du diese Datei benutzt.</p>
     <p class="link"><a href="<%= @downloadlink %>"><%= @downloadlink %></a></p>
-    <p>Viel Spaß!<br />Anregungen, Lob, Kritik an ben [ätt] nerdlabor [punkt] de</p>
+    <h2>Viel Spaß!</h2>
+    <p>Anregungen, Lob, Kritik an ben [ätt] nerdlabor [punkt] de</p>
   </body>
 </html>
