ort im titel funktion implementiert
git-svn-id: https://svn.eexistence.de/kalender@18 49ae9e9a-b390-11de-a7b7-45c05fdaeb71

--- a/views/choose.erb
+++ b/views/choose.erb
@@ -28,7 +28,7 @@
       <br />
       <h2>Ort im Titel</h2>
       <p>Falls du den Ort der Veranstaltung im Titel des Events angezeigt haben möchtest, setze hier einfach einen Haken!<br/><br />
-        <input type="checkbox" name="ortimtitel" value="1" /> Ort soll im Titel angezeigt werden</p>
+        <input type="checkbox" name="post[venue]" value="1" />Ort soll im Titel angezeigt werden</p>
       <h2>Los gehts!</h2>
       <input type="submit" name="submit" value="submit" />
     </form>
