--- a/views/index.erb
+++ b/views/index.erb
@@ -98,76 +98,93 @@
         </tr>
       </table>
     </form>
-    <p><font style="color: red;font-weight:bold;">*</font>Die Seminargruppe sollte nur gewählt werden wenn eine vorhanden ist
-      (Wenns keine Seminargruppen gibt, dann auch keine 1 eintragen)</p>
+    <p><font style="color: red;font-weight:bold;">*</font>Die Seminargruppe
+      sollte nur gewählt werden wenn eine vorhanden ist (Wenns keine
+      Seminargruppen gibt, dann auch keine 1 eintragen)</p>
     <h2><a name="sunbird">Sunbird / Thunderbird mit Lightning</a></h2>
     <ol>
-      <li>Erstellt euch euren entsprechenden Kalenderlink.</li>
-      <li>&#246;ffnet Sunbird</li>
-      <li>Klickt auf "Datei" -> "Externen Kalender abonnieren".</li>
-      <li>Es &#246;ffnet sich ein Assistent bei dem ihr "Im Netzwerk" ausw&#228;hlen und auf "Weiter" klicken m&#252;sst.</li>
-      <li>W&#228;hlt dann bem Format "iCalendar (ICS)" aus und gebt euren Kalenderlink ein.</li>
-      <li>Klickt auf "Weiter". Gebt dann eurem Kalender einen Namen und eine Farbe und klickt nochmals auf "Weiter".</li>
-      <li>Wenn dann dasteht "Ihr Kalender wurde erstellt." seit ihr fertig und k&#246;nnt euch an eurem neuen Kalender erfreuen. Wenn nicht: Do it all again!</li>
+      <li>Erstelle deinen Kalenderlink.</li>
+      <li>Öffne Sunbird</li>
+      <li>Klick auf "Datei" -> "Einen neuen Kalender erstellen".</li>
+      <li>Es öffnet sich ein Assistent bei dem du "Im Netzwerk" wählen und auf
+        "Weiter" klicken musst.</li>
+      <li>Wähle dann beim Format "iCalendar (ICS)" aus und gib deinen
+        Kalenderlink ein.</li>
+      <li>Klick auf "Weiter". Gib dann deinem Kalender einen Namen und eine
+        Farbe und klick nochmals auf "Weiter".</li>
+      <li>Jetzt auf "Fertig" klicken. Danach sollte dein Kalender angezeigt
+        werden. Wenn nicht: Do it all again!</li>
     </ol>
     <h2><a name="outlook">Microsoft Office Outlook 2007</a></h2>
     <ol>
-      <li>Kalenderlink erstellen, Adressleiste kopieren</li>
+      <li>Erstelle deinen Kalenderlink.</li>
       <li>Outlook in der Kalenderansicht: Extras > Kontoeinstellungen</li>
-      <li>Reiter "Internetkalender" auswählen, dort mit "Neu..." einen Internetkalender anlegen</li>
-      <li>Den Kalenderlink aus der Zwischenablage in das URL-Feld einfügen</li>
-      <li>Nun noch Namen vergeben und das wars, dieser Kalender wird nun künftig aktualisiert</li>
+      <li>Reiter "Internetkalender" auswählen, dort mit "Neu..." einen
+        Internetkalender anlegen</li>
+      <li>Den Kalenderlink in das URL-Feld kopieren.</li>
+      <li>Nun noch Namen vergeben und das wars, dieser Kalender wird nun
+        künftig aktualisiert.</li>
     </ol>
     <h2><a name="outlook2">ältere Microsoft Office Outlook</a></h2>
     <ol>
-      <li>Erstellt euch euren entsprechenden Kalenderlink.</li>
-      <li>&#246;ffnet diesen Link in einem Browser.</li>
-      <li>Klickt dort auf "Datei" -> "Speichern unter" und speichert den Kalender mit der Dateiendung "ics" ab. Also beispielsweise "meinkalender.ics".</li>
-      <li>WICHTIG: &#246;ffnet diese Datei NICHT mit dem Notepad oder &#228;hnliches, da dadurch das UTF-8 Format zerst&#246;rt wird.</li>
-      <li>&#246;ffnet Outlook und klickt auf "Datei" -> "'Importieren/Exportieren...".</li>
-      <li>W&#228;hlt dort "iCalendar- oder vCalendar-Datei (.vcs) importeiren" aus und klickt auf "Weiter".</li>
-      <li>Sucht eure Datei, w&#228;hlt sie an und klickt auf "Ok".</li>
-      <li>Wenn kein Fehler kommt, schaut in eurem Kalender ob alle Eintr&#228;ge korrekt vorhanden sind. Wenn ja:Gl&#252;ckwunsch und viel Spass, Wenn Nein: Do it all again.</li>
+      <li>Erstelle deinen Kalenderlink und speichere deine Kalenderdatei ab.</li>
+      <li>Öffne Outlook und klick auf "Datei" -> "Importieren/Exportieren...".</li>
+      <li>Wähle dort "iCalendar- oder vCalendar-Datei (.vcs) importieren" aus
+        und klicke auf "Weiter".</li>
+      <li>Suche deine Datei, wähle sie aaus und klick auf "Ok".</li>
+      <li>Wenn kein Fehler kommt, schau in deinem Kalender nach, ob alle
+        Einträge vorhanden sind. Wenn ja:Glückwunsch und viel Spaß, Wenn Nein:
+        Do it all again.</li>
     </ol>
     <h2><a name="google">Google Calendar</a></h2>
-    <p>Bei Google Calendar gibt es zwei M&#246;glichkeiten euren Kalenderlink einzubinden. Ich bevorzuge erstere, da diese Methode, den Kalendar bei eventuellen &#228;nderungen automatisch auch in meinem Google Calendar &#228;ndert. Bei der zweiten Methode, wird nur die Version des Kalenders benutzt, die zum Zeitpunkt des Speicherns vorlag. Falls Professoren, etc. den Kalender nachtr&#228;glich &#228;ndern, wird euer Kalender dann NICHT automatisch aktualisiert.</p>
-    <h3>M&#246;glichkeit 1:</h3>
+    <p>Bei Google Calendar gibt es zwei Möglichkeiten deinen Kalenderlink
+      einzubinden. Ich bevorzuge erstere, da diese Methode, den Kalendar bei
+      eventuellen Änderungen automatisch auch in meinem Google Calendar ändert.
+      Bei der zweiten Methode, wird nur die Version des Kalenders benutzt, die
+      zum Zeitpunkt des Speicherns vorlag. Falls Professoren, etc. den Kalender
+      nachträglich ändern, wird euer Kalender dann NICHT automatisch
+      aktualisiert.</p>
+    <h3>Möglichkeit 1:</h3>
     <ol>
       <li>Erstelle deinen Kalenderlink.</li>
-      <li>Klicke auf "Manage Calendars". Das findest du etwas versteckt unter deinen pers&#246;nlichen Kalendern.</li>
-      <li>Klicke unter "Other Calendars" auf  "Add Calendar" und dann auf "Public Calendar Address".</li>
-      <li>Gib dort deinen Kalenderlink ein und klicke auf "Add".</li>
-      <li>Nun m&#252;sste der Kalender bei dir erscheinen (kann aber etwas dauern). Wenn nicht: Do it all again.</li>
+      <li>Klicke links unten in deinem "Weitere Kalender"-Feld auf "Hinzufügen".
+        Dann auf "über URL hinzufügen"</li>
+      <li>Gib dann deinen Kalenderlink ein und klicke auf "Hinzufügen".</li>
+      <li>Nun müsste der Kalender bei dir erscheinen (kann aber ein paar Minuten
+        dauern). Wenn nicht: Do it all again.</li>
     </ol>
-    <h3>M&#246;glichkeit 2:</h3>
+    <h3>Möglichkeit 2:</h3>
     <ol>
-      <li>Erstelle deinen entsprechenden Kalenderlink.</li>
-      <li>&#246;ffne diesen Link in einem Browser.</li>
-      <li>Klicke dort auf "Datei" -> "Speichern unter" und speichere den Kalender mit der Dateiendung "ics" ab. Also beispielsweise "meinkalender.ics".</li>
-      <li>WICHTIG: ffne diese Datei NICHT mit dem Notepad oder &#228;hnliches, da dadurch das UTF-8 Format
-        zerst&#246;rt wird. (Das Problem tritt nur bei Dreckswindows auf ;-) )</li>
-      <li>Klicke auf "Manage Calendars". Das findest du etwas versteckt unter deinen pers&#246;nlichen Kalendern.</li>
-      <li>Klicke auf "Import Calendar" und w&#228;hle bei "Step 1: Select File" deine Datei an.</li>
-      <li>Klicke auf "Import" und nach ein wenig Ladezeit m&#252;sste sowas &#228;hnliches wie "Successfully imported 301 events." dastehen. Gl&#252;ckwunsch, es l&#228;uft. Wenn nicht: Do it all again.</li>
+      <li>Erstelle deinen Kalenderlink.</li>
+      <li>Klicke links unten in deinem "Weitere Kalender"-Feld auf "Hinzufügen".
+        Dann auf "Kalender importieren"</li>
+      <li>Folge danach den Anweisungen.</li>
     </ol>
     <h2><a name="handy">Kalender aufs Handy</a></h2>
-    <p>Zuerst m&#252;sst ihr den Kalender nach obigen Anleitungen in Outlook, Sunbird oder irgendwas anderes importieren, je nachdem mit welchen Programm sich eure Handysoftware synchronisieren kann. Somit m&#252;ssten eigentlich alle Handytypen funktionieren, die diese Funktion haben.</p>
+    <p>Zuerst musst du den Kalender nach obigen Anleitungen in Outlook,
+      Sunbird oder irgendwas anderes importieren, je nachdem mit welchen
+      Programm sich deine Handysoftware synchronisieren kann. Somit
+      müssten eigentlich alle Handytypen funktionieren, die diese Funktion
+      unterstützen.</p>
     <h2><a name="faq">FAQ</a></h2>
     <strong>1. iCal? Was denn das?</strong>
-    <p>Das iCal-Format ist ein universelles Kalenderformat von Apple, welches von Outlook, Sunbird, Google Calender und vielen anderen Programmen gelesen werden kann. Somit k&#246;nnt ihr euch die  Datei hinexportieren wohin ihr wollt.
-      Check: <a href="http://de.wikipedia.org/wiki/Ical">http://de.wikipedia.org/wiki/Ical</a>
+    <p>Das iCal-Format ist ein universelles Kalenderformat von Apple, welches
+      von Outlook, Sunbird, Google Calender und vielen anderen Programmen
+      gelesen werden kann. Somit kannst du dir die  Datei hinexportieren wohin
+      du willst. Check:
+      <a href="http://de.wikipedia.org/wiki/Ical">http://de.wikipedia.org/wiki/Ical</a>
     </p>
-    <strong>2. Ich habe alles pr&#228;zise nach der Anleitung gemacht aber mein Outlook sagt trotzdem "Die Datei calendar.ics ist keine g&#252;ltige Internetkalenderdatei.". Was kann ich tun?</strong>
-    <p>Nun m&#252;sst ihr die Datei doch nochmal &#246;ffnen. Aber bitte nehmt keinen Standardtexteditor sondern am besten ist ein HTML-Editor. Dort k&#246;nnt ihr dann sicherstellen, das er Zeichensatz der Datei UTF-8 bleibt. Diese Einstellung ist bei jedem Editor anders, also einfach mal suchen. Speichert die Datei und versucht sie nochmal in Outlook zu laden. Falls das immernoch nicht funktioniert, schreibt mir ne mail.</p>
-    <strong>3. Ich habe auch Nummer 2 erledigt aber es geht immernoch nicht. Was kann ich noch tun?</strong>
-    <p>Bei &#228;lteren Outlooks kann es Probleme mit der Version des Kalenders geben. &#214;ffnet die Datei wieder nach der Anleitung in Nummer zwei und &#228;ndert in den ersten Zeilen die Versionsnummer von "2.0" auf "1.0" (ohne Anfhrungszeichen).</p>
-    <strong>4. Ich studiere Druck- bzw. Verpackungstechnik (Diplom) und beim Laden des Scripts kommt ein Fehler bei der Eingabe.</strong>
-    <p>Der HTWK-Kalender f&#252;r diesen Studiengang ist zusammengefasst und es muss das K&#252;rzel "DV/DT" bzw. "DV/VT" benutzt werden.</p>
+    <strong>4. Ich studiere Druck- bzw. Verpackungstechnik (Diplom) und beim
+      Laden des Scripts kommt ein Fehler bei der Eingabe.</strong>
+    <p>Der HTWK-Kalender für diesen Studiengang ist zusammengefasst und es muss
+      das Kürzel "DV/DT" bzw. "DV/VT" benutzt werden.</p>
     <strong>5. Ich nutze MacOS und alle Events sind um eine Stunde verschoben.</strong>
-    <p>Hier sollte &#252;berpr&#252;ft werden ob im Betriebssystem selbst die falsche Zeitzone mit der "richtigen" Zeit gew&#228;hlt wurde und ggf. umgestellt werden.</p>
-    <strong>6. Mein Studiengang, Seminargruppe, Abschluss oder irgendetwas anderes fehlt.</strong>
-    <p>Falls ihr mitbekommt das irgendetwas fehlt, dann schreibt einfach eine Mail.</p>
-
-
+    <p>Hier solltest du überprüfen ob im Betriebssystem selbst die
+      falsche Zeitzone mit der "richtigen" Zeit gewählt wurde und ggf.
+      umstellen.</p>
+    <strong>6. Mein Studiengang, Seminargruppe, Abschluss oder irgendetwas
+      anderes fehlt.</strong>
+    <p>Falls du mitbekommst das irgendetwas fehlt, dann schreib mir einfach
+      eine Mail.</p>
   </body>
 </html>
