bug gefixt: studiengänge mit / funktioneiren jetzt auch
git-svn-id: https://svn.eexistence.de/kalender@31 49ae9e9a-b390-11de-a7b7-45c05fdaeb71

--- a/views/index.erb
+++ b/views/index.erb
@@ -69,7 +69,7 @@
           <td>
             <select name="post[studiengang]">
               <% @studiengang.sort.each do |n| %>
-                <option value="<%= n %>"><%= n %></option>
+                <option value="<%= n.sub("/","_") %>"><%= n %></option>
             <% end %></select>
           </td>
           <td>
