wiki link in faqs geändert
git-svn-id: https://svn.eexistence.de/kalender@32 49ae9e9a-b390-11de-a7b7-45c05fdaeb71

--- a/views/index.erb
+++ b/views/index.erb
@@ -172,17 +172,17 @@
       von Outlook, Sunbird, Google Calender und vielen anderen Programmen
       gelesen werden kann. Somit kannst du dir die  Datei hinexportieren wohin
       du willst. Check:
-      <a href="http://de.wikipedia.org/wiki/Ical">http://de.wikipedia.org/wiki/Ical</a>
+      <a href="http://de.wikipedia.org/wiki/ICalendar">http://de.wikipedia.org/wiki/ICalendar</a>
     </p>
-    <strong>4. Ich studiere Druck- bzw. Verpackungstechnik (Diplom) und beim
+    <strong>2. Ich studiere Druck- bzw. Verpackungstechnik (Diplom) und beim
       Laden des Scripts kommt ein Fehler bei der Eingabe.</strong>
     <p>Der HTWK-Kalender für diesen Studiengang ist zusammengefasst und es muss
       das Kürzel "DV/DT" bzw. "DV/VT" benutzt werden.</p>
-    <strong>5. Ich nutze MacOS und alle Events sind um eine Stunde verschoben.</strong>
+    <strong>3. Ich nutze MacOS und alle Events sind um eine Stunde verschoben.</strong>
     <p>Hier solltest du überprüfen ob im Betriebssystem selbst die
       falsche Zeitzone mit der "richtigen" Zeit gewählt wurde und ggf.
       umstellen.</p>
-    <strong>6. Mein Studiengang, Seminargruppe, Abschluss oder irgendetwas
+    <strong>4. Mein Studiengang, Seminargruppe, Abschluss oder irgendetwas
       anderes fehlt.</strong>
     <p>Falls du mitbekommst das irgendetwas fehlt, dann schreib mir einfach
       eine Mail.</p>
