Anleitung Evolution, kurz und knapp
git-svn-id: https://svn.eexistence.de/kalender@33 49ae9e9a-b390-11de-a7b7-45c05fdaeb71

--- a/views/index.erb
+++ b/views/index.erb
@@ -29,6 +29,7 @@
       <a href="#kalenderlink">Kalenderlink erstellen</a><br /><br />
       Kalender importieren in<br />
       <a href="#sunbird">Sunbird / Thunderbird mit Lightning</a><br />
+      <a href="#evolution">Evolution</a><br />
       <a href="#outlook">Microsoft Office Outlook 2007</a><br />
       <a href="#outlook2">ältere Outlook</a><br />
       <a href="#google">Google Calendar</a><br /><br />
@@ -114,6 +115,15 @@
         Farbe und klick nochmals auf "Weiter".</li>
       <li>Jetzt auf "Fertig" klicken. Danach sollte dein Kalender angezeigt
         werden. Wenn nicht: Do it all again!</li>
+    </ol>
+     <h2><a name="evolution">Evolution</a></h2>
+    <ol>
+      <li>Erstelle deinen Kalenderlink.</li>
+      <li>Evolution in der Kalenderansicht: Datei > Neu > Kalender</li>
+      <li>Art "Im Web" auswählen</li>
+      <li>Den Kalenderlink unverändert in das URL-Feld kopieren.</li>
+      <li>Nun noch Namen vergeben und das wars, dieser Kalender wird nun
+        künftig aktualisiert.</li>
     </ol>
     <h2><a name="outlook">Microsoft Office Outlook 2007</a></h2>
     <ol>
