--- a/views/index.erb
+++ b/views/index.erb
@@ -12,7 +12,7 @@
     <p>Dieses Script wandelt den HTWK-Kalender den ihr unter
       <a href="http://www.htwk-leipzig.de/de/studierende/online-services/lehrveranstaltungsplan/matrikel-seminargruppenplan/">http://www.htwk-leipzig.de</a>
       abrufen könnt, in das universelle iCal Format. Somit könnt ihr euren HTWK-Kalender
-      überall da benutzen wo iCal unetrstützt wird.</p>
+      überall da benutzen, wo iCal unterstützt wird.</p>
     <p>Es gibt nur Anleitungen f&#252;r Outlook, Sunbird, Evolution und Google Calendar.
       Aber es m&#252;ssten eigentlich alle anderen Programme funktionieren die
       iCal unterst&#252;tzen.</p>
