handy anleitung ergänzt
git-svn-id: https://svn.eexistence.de/kalender@38 49ae9e9a-b390-11de-a7b7-45c05fdaeb71

--- a/views/index.erb
+++ b/views/index.erb
@@ -176,6 +176,9 @@
       Programm sich deine Handysoftware synchronisieren kann. Somit
       müssten eigentlich alle Handytypen funktionieren, die diese Funktion
       unterstützen.</p>
+    <p>Für Sony Ericsson Handy- und Windowsnutzer gibt es "MyPhoneExplorer" mit
+     dem du nahezu jedes Sony Ericsson mit iCal befüttern kannst.
+     <a href="http://www.fjsoft.at/de/downloads.php">Download hier</a></p>
     <h2><a name="faq">FAQ</a></h2>
     <strong>1. iCal? Was denn das?</strong>
     <p>Das iCal-Format ist ein universelles Kalenderformat von Apple, welches
