--- a/views/index.erb
+++ b/views/index.erb
@@ -199,5 +199,9 @@
       anderes fehlt.</strong>
     <p>Falls du mitbekommst das irgendetwas fehlt, dann schreib mir einfach
       eine Mail.</p>
+    <strong>5. Mein Outlook 2003 möchte die Kalenderdatei nicht schlucken!</strong>
+    <p>Öffne die Datei mit einem Editor, der NICHT der Windows Editor ist. Suche
+      VERSION:2.0 und mach ein VERSION:1.0 draus und hoffe das es dann
+      funktioniert.</p>
   </body>
 </html>
