--- a/views/get.erb
+++ b/views/get.erb
@@ -4,7 +4,7 @@
   <head>
     <title>HTWK-Kalender to iCal</title>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-    <link rel="stylesheet" type="text/css" href="/style.css">
+    <link rel="stylesheet" type="text/css" href="/style.css" />
   </head>
   <body>
     <h1>HTWK-Kalender to iCal</h1>
