portberücksichtigung bei erzeugung des download und permalink get View mit anderem namen  bei download der .ics datei
git-svn-id: https://svn.eexistence.de/kalender@48 49ae9e9a-b390-11de-a7b7-45c05fdaeb71

--- a/views/get.erb
+++ b/views/get.erb
@@ -13,7 +13,7 @@
     <p class="link"><%= @permalink %></p>
     <h2>Downloadlink</h2>
     <p>Hier ist dein Downloadlink. Lade dir hier die Kalenderdatei runter. Achtung: Wenn Änderungen am Kalender vorgenommen werden, ändert sich dein Kalender nicht automatisch, falls du diese Datei benutzt.</p>
-    <p class="link"><a href="<%= @downloadlink %>"><%= @downloadlink %></a></p>
+    <p class="link"><a href="<%= @downloadlink %>">Download</a></p>
     <h2>Viel Spaß!</h2>
     <p>Anregungen, Lob, Kritik an ben [ätt] nerdlabor [punkt] de</p>
   </body>
